<resources>
    <string name="app_name">CoolDict</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- No words screen -->
    <string name="no_word_icon_description">No words icon</string>
    <string name="no_word_text">You have no add words!</string>
    <string name="no_word_add_new_word_text">Add new word by taping on + item</string>


    <string name="words_loading_error_text">Error while loading words</string>

    <string name="actionbar_title_edit_word_activity">Edit word</string>
    <string name="actionbar_title_add_new_word_activity">New word</string>
    <string name="add_new_word_edit_text_original_word">Original</string>
    <string name="add_new_word_edit_text_word_id">Word id</string>
    <string name="add_new_word_edit_text_translated_word">Translated</string>
    <string name="add_new_word_edit_text_dictionary_title">Dictionary</string>
    <string name="show_empty_word_error_text">Word cannot be empty</string>
    <string name="word_detail_menu_delete">Delete</string>
    <string name="no_data">No Data</string>

    <string name="error_cannotGetDictionaries">Error! Cannot get any dictionaries</string>
    <string name="nvd_iv_description">ava</string>
    <string name="nvd_tv_username">Android Studio</string>
    <string name="nvd_tv_email">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="loading_error">Unexpected error when loading data!</string>
    <string name="action_add_word">Add new word</string>
    <string name="empty_original_word_field">Original word field must be filled</string>
    <string name="empty_dictionary_field">Dictionary field must be filled</string>
    <!--<string name="empty_fields_error"></string>-->
    <string name="word_detail_menu_edit">Edit</string>
    <string name="actionbar_title_word_detail">Word Detail</string>
    <string name="title_delete_confirmation_dialog">Delete</string>
    <string name="message_delete_confirmation_dialog">Do you want to delete?</string>
    <string name="positive_delete_confirmation_dialog">Delete</string>
    <string name="negative_delete_confirmation_dialog">Cancel</string>
    <string name="action_dictionary_manager">Dictionary Manager</string>
    <string name="title_activity_dictionary_manager">Dictionary Manager</string>
    <string name="show_all_words">All</string>
    <string name="action_create_new_dictionary">Create new dictionary</string>
    <string name="nav_dictionary_header_title">Dictionaries</string>
    <string name="nav_dictionary_create">Create new dictionary</string>
    <string name="dialog_et_dictionary_creation">Dictionary name</string>
    <string name="dialog_dictionary_creation_title">Create new dictionary</string>
    <string name="dialog_dictionary_creation_create">Create</string>
    <string name="dialog_dictionary_creation_cancel">Cancel</string>


</resources>
