<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/noWords"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/noWordsIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:contentDescription="@string/no_word_icon_description"
        android:src="@drawable/ic_no_words" />

    <TextView
        android:id="@+id/noWordsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/list_item_padding"
        android:text="@string/no_word_text" />

    <TextView
        android:id="@+id/noWordsAdd"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_word_add_new_word_text" />

</LinearLayout>