<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/ea_original_word"
            android:inputType="textAutoCorrect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="true"
            android:hint="@string/add_new_word_edit_text_original_word"
            android:singleLine="true" />

        <EditText
            android:id="@+id/ea_translated_word"
            android:inputType="textAutoCorrect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="true"
            android:hint="@string/add_new_word_edit_text_translated_word"
            android:singleLine="true" />

        <AutoCompleteTextView
            android:id="@+id/ea_dictionary_id"
            android:inputType="textAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:imeOptions="actionSend"
            android:hint="@string/add_new_word_edit_text_dictionary_title"
            android:completionThreshold="1"
            />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>