<?xml version="1.0" encoding="utf-8"?>
<com.goo32v2.cooldict.words.SwipeToRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/wordsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/wordsLL"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/noWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true" >

            <ImageView
                android:id="@+id/noWordsIcon"
                android:layout_gravity="center"
                android:src="@drawable/ic_no_words"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/no_word_icon_description" />

            <TextView
                android:id="@+id/noWordsText"
                android:layout_gravity="center"
                android:text="@string/no_word_text"
                android:layout_marginBottom="@dimen/list_item_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/noWordsAdd"
                android:layout_gravity="center"
                android:text="@string/no_word_add_new_word_text"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="48dp" />

        </LinearLayout>

    </RelativeLayout>

</com.goo32v2.cooldict.words.SwipeToRefreshLayout>